k8s/ch4/tripviewer-deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deployment # RENAME
  namespace: web
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: tripviewer # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: tripviewer # RENAME
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registrykcu5316.azurecr.io/tripinsights/tripviewer:1.0 # RENAME
          name: tripviewer # RENAME
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service # RENAME
  namespace: web
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: tripviewer # RENAME
