k8s/ch4/user-java-deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment # RENAME
  namespace: api
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: user-java-api # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: user-java-api # RENAME
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registrykcu5316.azurecr.io/tripinsights/user-java:1.0 # RENAME
          name: user-java # RENAME
          # volumeMounts:
          #   - name: secrets-store01-inline
          #     mountPath: "/secrets"
          #     readOnly: true
          ports:
            - containerPort: 80
              name: http
      # volumes:
      #   - name: secrets-store01-inline
      #     csi:
      #       driver: secrets-store.csi.k8s.io
      #       readOnly: true
      #       volumeAttributes:
      #         secretProviderClass: "azure-tripviewer-smi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service # RENAME
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: user-java-api # RENAME
