k8s/ch4/userprofile-deployment.yml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment # RENAME
  namespace: api
spec:
  selector: # Define the wrapping strategy
    matchLabels: # Match all pods with the defined labels
      app: userprofile-api # Labels follow the `name: value` template
  template: # This is the template of the pod inside the deployment
    metadata:
      labels:
        app: userprofile-api # RENAME
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: registrykcu5316.azurecr.io/tripinsights/userprofile:1.0 # RENAME
          name: userprofile # RENAME
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service # RENAME
  namespace: api
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: userprofile-api # RENAME
