k8s/ch4/ingression_api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /swagger/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /swagger/docs/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /swagger/docs/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /swagger/docs/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
